# zerobrew

./: CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  README.zh.md  SECURITY.MD  install.sh
.github/workflows/: ci.yml  homebrew-compat.yml  release.yml  test.yml
docs/: zerobrew-architecture-flow.html
site/src/: _redirects
zb_cli/: Cargo.toml
zb_cli/src/: cli.rs  init.rs  utils.rs
zb_cli/src/commands/: bundle.rs  cleanup.rs  info.rs  install.rs  list.rs  migrate.rs  mod.rs  outdated.rs  run.rs  search.rs  uninstall.rs  upgrade.rs
zb_cli/tests/: integration.rs
zb_core/fixtures/: formula_foo.json  formula_with_rebuild.json
zb_core/src/: errors.rs  lib.rs
zb_core/src/formula/: bottle.rs  mod.rs  resolve.rs  types.rs
zb_io/: Cargo.toml
zb_io/src/: lib.rs  progress.rs
zb_io/src/cellar/: link.rs  materialize.rs  mod.rs
zb_io/src/extraction/: extract.rs  mod.rs
zb_io/src/extraction/patch/: macos.rs  mod.rs
zb_io/src/installer/: cask.rs  install.rs  mod.rs
zb_io/src/installer/install/: bottle.rs  cleanup.rs  mod.rs  outdated.rs  plan.rs  source.rs  uninstall.rs
zb_io/src/network/: api.rs  mod.rs  tap_cask.rs  tap_formula.rs
zb_io/src/network/download/: single.rs
zb_io/src/storage/: db.rs
