[package]
name = "zb_io"
version = "0.2.1"
edition = "2024"
rust-version.workspace = true

[dependencies]
flate2.workspace = true
futures.workspace = true
libc.workspace = true
futures-util.workspace = true
rayon.workspace = true
regex.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
fs4.workspace = true
walkdir.workspace = true
xz2.workspace = true
zstd.workspace = true
zip.workspace = true
tracing.workspace = true
strsim.workspace = true
tempfile.workspace = true
reqwest.workspace = true
zb_core = { path = "../zb_core" }

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
